# forberedelse

./: CMakeLists.txt  main.cpp
include/: Bus.h  Car.h  MotorCycle.h  Veichle.h
src/: Bus.cpp  CMakeLists.txt  Car.cpp  MotorCycle.cpp
tests/: CMakeLists.txt  tests.cpp
